examples/neg/set1.pcl
program set1;

var x : integer;

begin
  x := 2.5;
end.
